--- a/otrc_app/styles/globals.css
+++ b/otrc_app/styles/globals.css
@@ -1,6 +1,19 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,700;0,900;1,700&display=swap');
+
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body {
+        @apply font-body text-[#232428]
+
+    }
+}
+
 
 @layer components {
     .headerLink {
